--- a/.github/workflows/watchman.yml
+++ b/.github/workflows/watchman.yml
@@ -19,6 +19,7 @@ jobs:
           ref: ${{ github.ref }}
 
       - name: Setup Go
+        uses: actions/setup-go@v1
         with:
           go-version: 1.13
 
