--- a/.github/workflows/watchman.yml
+++ b/.github/workflows/watchman.yml
@@ -23,6 +23,12 @@ jobs:
         with:
           go-version: 1.13
 
+      - name: Set GOPATH and PATH
+        run: |
+          echo "##[set-env name=GOPATH;]$(dirname $GITHUB_WORKSPACE)"
+          echo "##[add-path]$(dirname $GITHUB_WORKSPACE)/bin"
+        shell: bash
+
       - name: Run Linter
         run: make lint
 
